# openapi.yaml
@@ -56,7 +56,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:27323/schemas/Config.json
+            - http://127.0.0.1:64236/schemas/Config.json
           format: uri
           readOnly: true
           type: string
@@ -89,6 +89,9 @@ components:
         AllowSteamDesktopLayout:
           default: false
           type: boolean
+        BackButtonPassthrough:
+          default: false
+          type: boolean
         DefaultControllerType:
           default: xbox360
           enum:
@@ -111,6 +114,7 @@ components:
         - DefaultControllerType
         - GyroPassthrough
         - TouchpadPassthrough
+        - BackButtonPassthrough
         - AllowSteamDesktopLayout
         - ImmediateSensorUpdates
       type: object
@@ -146,7 +150,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:27323/schemas/EnforceInputConfig.json
+            - http://127.0.0.1:64236/schemas/EnforceInputConfig.json
           format: uri
           readOnly: true
           type: string
@@ -173,7 +177,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:27323/schemas/ErrorModel.json
+            - http://127.0.0.1:64236/schemas/ErrorModel.json
           format: uri
           readOnly: true
           type: string
@@ -220,7 +224,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:27323/schemas/InitialLaunch.json
+            - http://127.0.0.1:64236/schemas/InitialLaunch.json
           format: uri
           readOnly: true
           type: string
@@ -244,7 +248,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:27323/schemas/OpenConfiguratorArgs.json
+            - http://127.0.0.1:64236/schemas/OpenConfiguratorArgs.json
           format: uri
           readOnly: true
           type: string
@@ -261,7 +265,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:27323/schemas/OverlayChanged.json
+            - http://127.0.0.1:64236/schemas/OverlayChanged.json
           format: uri
           readOnly: true
           type: string
@@ -300,7 +304,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:27323/schemas/ShowHideUI.json
+            - http://127.0.0.1:64236/schemas/ShowHideUI.json
           format: uri
           readOnly: true
           type: string
@@ -333,7 +337,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:27323/schemas/SteamAndCefStatus.json
+            - http://127.0.0.1:64236/schemas/SteamAndCefStatus.json
           format: uri
           readOnly: true
           type: string
@@ -375,7 +379,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:27323/schemas/VIIPERStatus.json
+            - http://127.0.0.1:64236/schemas/VIIPERStatus.json
           format: uri
           readOnly: true
           type: string
@@ -390,7 +394,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:27323/schemas/VersionInfo.json
+            - http://127.0.0.1:64236/schemas/VersionInfo.json
           format: uri
           readOnly: true
           type: string
@@ -440,7 +444,7 @@ components:
       type: object
 info:
   title: SISR API
-  version: dev-snapshot-4-g634fcf6
+  version: dev-snapshot-5-gb57699a
 openapi: 3.1.0
 paths:
   /api/v1/config:
@@ -779,4 +783,4 @@ paths:
           description: Error
 servers:
   - description: SISR API
-    url: http://127.0.0.1:27323
+    url: http://127.0.0.1:64236
